crates/stylex-shared/tests/transform_process_test/snapshots/fold__transform_process_test__stylex_plugin_process_stylex_rules__all_rules_use_layers_false_code.snap
---
source: crates/stylex-shared/tests/transform_process_test/stylex_plugin_process_stylex_rules.rs
expression: result.code
---
import * as stylex from '@stylexjs/stylex';
export const constants = {
    YELLOW: "yellow",
    ORANGE: "var(--orange)",
    mediaBig: "@media (max-width: 1000px)",
    mediaSmall: "@media (max-width: 500px)"
};
export const vars = {
    blue: "var(--blue-x1wjvfvx)",
    __varGroupHash__: "x18ubi5e"
};
export const spacing = {
    small: "var(--small-x1chbf7y)",
    medium: "var(--medium-xc90lyb)",
    large: "var(--large-x6v7g7j)",
    __varGroupHash__: "xuhkdh4"
};
export const themeColor = {
    x18ubi5e: "xtrz4el x18ubi5e",
    $$css: true
};
export const themeSpacing = {
    xuhkdh4: "x1bn9r7g xuhkdh4",
    $$css: true
};
export const styles = {
    root: {
        "animationName-kKVMdj": "animationName-xckgs0v",
        "backgroundColor-kWkggS": "backgroundColor-xrkmrrc",
        "borderColor-kVAM5u": "borderColor-x1bg2uv5 borderColor-x1mzy5kr borderColor-xqiy1ys",
        "textShadow-kKMj4B": "textShadow-x1skrh0i textShadow-x1cmij7u",
        "padding-kmVPX3": "padding-x1w2z5jh",
        $$css: true
    },
    dynamic: (color)=>[
            {
                "color-kMwMTN": "color-xfx01vb",
                $$css: true
            },
            {
                "--color": color != null ? color : undefined
            }
        ]
};
