crates/stylex-shared/tests/transform_process_test/snapshots/fold__transform_process_test__stylex_plugin_process_stylex_rules__no_rules_code.snap
---
source: crates/stylex-shared/tests/transform_process_test/stylex_plugin_process_stylex_rules.rs
expression: result.code
---
import * as stylex from '@stylexjs/stylex';
export const constants = {
    YELLOW: "yellow",
    ORANGE: "var(--orange)",
    mediaBig: "@media (max-width: 1000px)",
    mediaSmall: "@media (max-width: 500px)"
};
export const vars = {
    blue: "var(--blue-x1wjvfvx)",
    __varGroupHash__: "x18ubi5e"
};
export const spacing = {
    small: "var(--small-x1chbf7y)",
    medium: "var(--medium-xc90lyb)",
    large: "var(--large-x6v7g7j)",
    __varGroupHash__: "xuhkdh4"
};
