crates/stylex-shared/tests/transform_process_test/snapshots/fold__transform_process_test__stylex_plugin_process_stylex_rules__postcss_plugin_respects_string_syntax_for_import_sources_code.snap
---
source: crates/stylex-shared/tests/transform_process_test/stylex_plugin_process_stylex_rules.rs
expression: code
---
import * as stylex from '@stylexjs/stylex';
import { constants } from './input.stylex';
export const styles = {
    root: {
        kMwMTN: "x3owktr",
        $$css: true
    }
};
